Open page style

--- a/client/open/page.html
+++ b/client/open/page.html
@@ -39,7 +39,9 @@
 
     </head>
     <body>
-        <div id="container">
-        </div>
+        <div class="row wrapper">
+            <div class="col-sm-12" id="container">
+            </div>
+        </div>    
     </body>
 </html>
