--- a/client/home.html
+++ b/client/home.html
@@ -53,6 +53,7 @@
         <script src="/js/app/Groups/tpl/GroupEditTpl.js"></script>
         <script src="/js/app/Groups/tpl/GropDeleteTpl.js"></script>
         <script src="/js/app/Groups/tpl/MyGroupsTpl.js"></script>
+        <script src="/js/app/Groups/tpl/GroupTeachersTpl.js"></script>
 
         <script src="/js/app/Groups/view/GroupView.js"></script>
         <script src="/js/app/Groups/view/GroupCollectionView.js"></script>
